--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="mask.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="India Covid19 Tracker"
+    />
+    <meta
+      name="keywords"
+      content="Covid19, Covid, Coronavirus, Covid19 India, India Covid, Covid Stats, Covid Updates, India Covid Updates, India Covid19 Tracker, India Coronavirus, India Coronavirus Tracker, Coronavirus Tracker, Track Coronavirus, Karona, Carona, mask, Stay safe"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>India Covid19 Tracker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
